# word-manager-rust-be

./: Cargo.toml  README.md  docker-compose.yml  testing-word-manager-locally.md
src/: main.rs
