[package]
name = "word-manager-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8"
lambda_http = "0.14"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
